test and bugfixes left
