# internal/api/filmLibriary/getFilmsList.go
@@ -1,22 +1,18 @@
 package filmlibriary
 
 import (
-	"encoding/json"
 	"fmt"
 	"log"
 	"net/http"
 
 	"github.com/Alphonnse/filmLibriary/internal/api"
 	"github.com/Alphonnse/filmLibriary/internal/convertor"
-	"github.com/Alphonnse/filmLibriary/internal/model"
 )
 
 // @Summary Get list of films
-// @Description Retrieve a list of films based on specified criteria
+// @Description Retrieve a list of films based on specified criteria. It should look like /film/getList/{sortBy}|none|/{orderBy}|none|
 // @ID getFilmsList
-// @Accept json
 // @Produce json
-// @Param body body model.GetFilmsListRequest true "Criteria for retrieving films list"
 // @Security JWTRegularUserAuth
 // @Success 200 {object} []model.FilmsListModel "List of films based on criteria"
 // @Failure 400 {object} model.ErrResponse "Invalid JSON or missing fields"
@@ -27,23 +23,14 @@ func (i *ImplementationLibriary) GetFilmsList(w http.ResponseWriter, r *http.Req
 		return
 	}
 
-	params := model.GetFilmsListRequest{}
-
-	decoder := json.NewDecoder(r.Body)
-	err := decoder.Decode(&params)
-	if err != nil {
-		log.Printf("Error while decoding get films list request JSON: %v\n", err)
-		api.RespondWithError(w, 400, fmt.Sprintf("Error parsing JSON: %v", err))
-		return
-	}
-
-	if validErrs := ValidateGetFilmsList(&params); len(validErrs) > 0 {
+	validErrs, sortBy, orderBy := ValidateGetFilmsList(r.URL); 
+	if len(validErrs) > 0 {
 		log.Printf("Invalid JSON: %v", validErrs)
-		api.RespondWithError(w, 400, fmt.Sprintf("Invalid JSON: %v", validErrs))
+		api.RespondWithError(w, 406, fmt.Sprintf("Invalid JSON: %v", validErrs))
 		return
 	}
 
-	sortedFilmsList, err := i.libriaryService.GetFilmsList(r.Context(), convertor.FromApiGetFilmsListToService(&params))
+	sortedFilmsList, err := i.libriaryService.GetFilmsList(r.Context(), convertor.FromApiGetFilmsListToService(sortBy, orderBy))
 	if err != nil {
 		log.Printf("Error returning sorted films list: %v\n", err)
 		api.RespondWithError(w, 400, fmt.Sprintf("Couldn't return sorted films list: %v", err))
@@ -51,5 +38,5 @@ func (i *ImplementationLibriary) GetFilmsList(w http.ResponseWriter, r *http.Req
 	}
 
 	api.RespondWithJSON(w, 200, sortedFilmsList)
-	log.Printf("List is returned: %s", params)
+	log.Printf("List is returned")
 }
